[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Controls/RobotControls/RangeSelector.gd" type="Script" id=1]

[node name="RangeSelector" type="HBoxContainer"]
margin_right = 128.0
margin_bottom = 48.0
script = ExtResource( 1 )

[node name="Name" type="Label" parent="."]
margin_top = 17.0
margin_right = 84.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "ControlName"

[node name="Label" type="Label" parent="."]
margin_left = 88.0
margin_top = 17.0
margin_right = 116.0
margin_bottom = 31.0
text = "Min:"

[node name="MinLine" type="LineEdit" parent="."]
margin_left = 120.0
margin_right = 178.0
margin_bottom = 48.0
text = "0"

[node name="Label2" type="Label" parent="."]
margin_left = 182.0
margin_top = 17.0
margin_right = 212.0
margin_bottom = 31.0
text = "Max:"

[node name="MaxLine" type="LineEdit" parent="."]
margin_left = 216.0
margin_right = 274.0
margin_bottom = 48.0
text = "1"

[node name="ToRange" type="Label" parent="."]
margin_left = 278.0
margin_top = 17.0
margin_right = 278.0
margin_bottom = 31.0
